<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大账房财务系统</string>
    <string name="title_activity_login">登陆</string>
    <string name="login_button_text">登陆</string>
    <string name="login_edit_user">请输入用户名</string>
    <string name="login_edit_password">请输入密码</string>
    <string name="login_error_hint">错误提示</string>
	<string name="main_upload">上传文件</string>
	<string name="main_history">历史查询</string>
	<string name="main_report">报表查询</string>
	<string name="main_message">我的消息</string>
	<string name="main_about">关于</string>
	<string name="actionbar_left">返回</string>
	<string name="actionbar_edit">编辑</string>
	<string name="actionbar_delete">删除</string>
	<string name="actionbar_photo">拍照</string>
	<string name="actionbar_query">查询</string>

    <string name="title_activity_reg">注册</string>
    <string name="reg_edit_user">请输入注册用户名</string>
    <string name="reg_edit_password">请输入密码</string>	
    <string name="reg_edit_password2">请输入确认密码</string>	
    <string name="reg_edit_name">请输入姓名</string>	
    <string name="reg_edit_company">请输入公司全称</string>	
    <string name="reg_edit_validcode">请输入验证码</string>	
    <string name="reg_submit_text">提交</string>
    <string name="reg_sendValidcode_text">发送验证码</string>
    
    <string name="title_activity_upload">文件上传</string>
    <string name="upload_submit_text">提交</string>
    
    <string name="title_activity_imagesel">我的照片流</string>
    <string name="imagesel_complete">完成</string>
    <string name="imageview_check">选择</string>
    <string name="imageview_complete">完成</string>
    
    <string name="title_activity_history">历史查询</string>
    <string name="history_submit_text">提交</string>
    <string name="history_filter_begin">开始日期</string>
    <string name="history_filter_end">结束日期</string>
    
    <string name="title_activity_report">报表查询</string>
    <string name="title_activity_report_zcfz">资产负债表</string>
    <string name="title_activity_report_lrb">利润表</string>
    <string name="title_activity_report_swbb">税务报表</string>
    <string name="title_activity_report_xjll">现金流量表</string>
    <string name="title_activity_report_mxb">明细账</string>
    
    <string name="report_period_query">查询期间</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    
    <string name="report_mxb_filter_begin">期间起</string>
    <string name="report_mxb_filter_end">期间止</string>
    <string name="report_mxb_filter_kmsx">科目属性</string>
    
    <string name="title_activity_message">消息</string>
    <string name="tab_sys_message">系统消息</string>
    <string name="tab_img_message">重拍消息</string>
    
    <string name="pull_to_refresh">下拉刷新</string>  
    <string name="release_to_refresh">松开刷新</string>  
    <string name="refreshing">正在加载</string>  
    <string name="not_updated_yet">暂未更新过</string>  
    <string name="updated_at">上次刷新：%1$s</string>  
    
    <string name="title_activity_imgmessage">重拍消息</string>
    <string name="message_dealstatus">处理状态：</string>
    <string name="message_returntime">退回时间：</string>
    <string name="message_questiondesc">问题描述：</string>
    <string name="message_badimage">问题图片：</string>
    <string name="message_newimage">新拍图片：</string>
    
    <string name="title_activity_sysmessage">系统消息</string>
    <string name="message_subject">消息主题：</string>
    <string name="message_sendtime">发送时间：</string>
    <string name="message_content">消息内容：</string>
    
    <string name="message_delete">删除</string>
</resources>
