<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:layout_margin="10dp"
	    android:orientation="vertical">
	    
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
			<TextView android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/msg_text_size"
			    android:text="@string/message_subject"/> 
			<TextView android:id="@+id/message_subject"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/msg_text_size"
			    android:text=""/>  			               
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
			<TextView android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/msg_text_size"
			    android:text="@string/message_sendtime"/> 
			<TextView android:id="@+id/message_sendtime"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/msg_text_size"
			    android:text=""/>  			               
        </LinearLayout>   
		<TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
			android:textSize="@dimen/msg_text_size"
		    android:text="@string/message_content"/>   
		<TextView android:id="@+id/message_content"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
            android:layout_marginTop="5dp"
			android:textSize="@dimen/msg_text_size"
		    android:background="@drawable/login_edit_bg"/>	
    </LinearLayout>
</RelativeLayout>
