<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/login_bg">
    
    <LinearLayout android:id="@+id/reg_err_vg" 	        
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:background="@drawable/login_error_bg"
        android:orientation="horizontal">
	    
        <ImageView android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_margin="5dp"
	         android:src="@drawable/error_img"
	         android:contentDescription="@string/login_error_hint" />
        
        <TextView 
            android:id="@+id/reg_err_txt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:gravity="center_vertical"
	        android:textColor="@android:color/white"
	        android:layout_margin="5dp"/>
    </LinearLayout>
    
    <LinearLayout 	        
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:background="@drawable/login_edit_bg"
        android:orientation="horizontal">
        
        <ImageView android:layout_width="@dimen/login_image_size"
            android:layout_height="@dimen/login_image_size"
            android:layout_margin="5dp"
            android:src="@drawable/login_userimg"
            android:contentDescription="@string/reg_edit_user" />
        
	    <EditText
	        android:id="@+id/regUser"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_margin="5dp"
	        android:gravity="center_vertical"
	        android:background="@android:color/white"
	        android:hint="@string/reg_edit_user"/>
    
	</LinearLayout>
	
    <LinearLayout 	        
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:background="@drawable/login_edit_bg"
        android:orientation="horizontal">
	    
        <ImageView android:layout_width="@dimen/login_image_size"
            android:layout_height="@dimen/login_image_size"
            android:layout_margin="5dp"
            android:src="@drawable/login_pwdimg"
            android:contentDescription="@string/reg_edit_password" />
        
	    <EditText
	        android:id="@+id/regpwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:gravity="center_vertical"
	        android:background="@android:color/white"
	        android:inputType="textPassword"
	        android:layout_margin="5dp"
	        android:hint="@string/reg_edit_password" />
	</LinearLayout>

	<LinearLayout 	        
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:background="@drawable/login_edit_bg"
        android:orientation="horizontal">
	    
        <ImageView android:layout_width="@dimen/login_image_size"
            android:layout_height="@dimen/login_image_size"
            android:layout_margin="5dp"
            android:src="@drawable/login_pwdimg"
            android:contentDescription="@string/reg_edit_password2" />
        
	    <EditText
	        android:id="@+id/regpwd2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:gravity="center_vertical"
	        android:background="@android:color/white"
	        android:inputType="textPassword"
	        android:layout_margin="5dp"
	        android:hint="@string/reg_edit_password2" />
	</LinearLayout>
	
    <LinearLayout 	        
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:background="@drawable/login_edit_bg"
        android:orientation="horizontal">
        
        <ImageView android:layout_width="@dimen/login_image_size"
            android:layout_height="@dimen/login_image_size"
            android:layout_margin="5dp"
            android:src="@drawable/login_userimg"
            android:contentDescription="@string/reg_edit_name" />
        
	    <EditText
	        android:id="@+id/regName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_margin="5dp"
	        android:gravity="center_vertical"
	        android:background="@android:color/white"
	        android:hint="@string/reg_edit_name"/>
    
	</LinearLayout>

    <LinearLayout 	        
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:background="@drawable/login_edit_bg"
        android:orientation="horizontal">
        
        <ImageView android:layout_width="@dimen/login_image_size"
            android:layout_height="@dimen/login_image_size"
            android:layout_margin="5dp"
            android:src="@drawable/login_userimg"
            android:contentDescription="@string/reg_edit_company" />
        
	    <EditText
	        android:id="@+id/regCompany"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_margin="5dp"
	        android:gravity="center_vertical"
	        android:background="@android:color/white"
	        android:hint="@string/reg_edit_company"/>
    
	</LinearLayout>

    <LinearLayout 	        
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height" 
        android:layout_marginTop="@dimen/login_edittext_margintop"
        android:layout_marginLeft="@dimen/login_edittext_marginleft"
        android:layout_marginRight="@dimen/login_edittext_marginright"
        android:gravity="center_vertical"
        android:orientation="horizontal">
	    
        <LinearLayout android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
        	android:background="@drawable/login_edit_bg"
        	android:orientation="horizontal">

	        <ImageView android:layout_width="@dimen/login_image_size"
	            android:layout_height="@dimen/login_image_size"
	            android:layout_margin="5dp"
	            android:src="@drawable/login_userimg"
	            android:contentDescription="@string/reg_edit_validcode" />
	        
		    <EditText
		        android:id="@+id/regValidcode"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:layout_margin="5dp"
		        android:gravity="center_vertical"
		        android:background="@android:color/white"
		        android:hint="@string/reg_edit_validcode"/>
    	</LinearLayout>
    	
    	<Button android:id="@+id/reg_sendValidcode"
    	    android:layout_width="100dp"
    	    android:layout_height="match_parent"
    	    android:background="@drawable/button_select"
        	android:textColor="@android:color/white"
        	android:text="@string/reg_sendValidcode_text"/>
    	
	</LinearLayout>
	    		    	    	
    <Button
        android:id="@+id/reg_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height" 
        android:layout_marginTop="@dimen/login_button_margintop"
        android:layout_marginLeft="@dimen/login_button_marginleft"
        android:layout_marginRight="@dimen/login_button_marginright"
        android:background="@drawable/button_select"
        android:textColor="@android:color/white"
        android:text="@string/reg_submit_text" />

</LinearLayout>
