<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imageview_bg">
    
    <com.ynt.account.control.ViewPagerCompat
        android:id="@+id/imageview_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.ynt.account.control.ViewPagerCompat>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/bottom_color">
        
        <Button
	        android:id="@+id/imageview_return"
	        android:layout_width="70dp"
	        android:layout_height="35dp"
	        android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/abc_action_bar_subtitle_text_size"
	        android:background="@drawable/top_back_select"
	        android:text="@string/actionbar_left" />

	    <TextView
	        android:id="@+id/imageview_title"
	        android:layout_weight="1.0"
	        android:layout_width="0dp"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/abc_action_bar_title_text_size"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_height="wrap_content" />
	
	    <CheckBox
	        android:id="@+id/imageview_check"
	        android:layout_width="80dp"
	        android:layout_height="35dp"
	        android:layout_marginRight="10dp"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/abc_action_bar_subtitle_text_size"
	        android:text="@string/imageview_check"
	        android:button="@drawable/check_select"
	        android:layout_gravity="center"/>
    </LinearLayout>
    
    <RelativeLayout android:id="@+id/imageview_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_color"> 
        
        <Button
	        android:id="@+id/imageview_complete"
	        android:layout_width="100dp"
	        android:layout_height="match_parent" 
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:layout_centerInParent="true"
	        android:background="@drawable/button_select"
	        android:textColor="@android:color/white"
	        android:text="@string/imageview_complete" />
    </RelativeLayout>
</RelativeLayout>
