 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      
   	<LinearLayout 	        
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content" 
       	android:layout_marginTop="10dp"
       	android:layout_marginLeft="10dp"
       	android:layout_marginRight="10dp"
       	android:gravity="center_vertical"
       	android:orientation="horizontal">
    
       	<TextView android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:layout_margin="5dp"
           	android:text="@string/report_mxb_filter_begin" />
       
	    <EditText
	        android:id="@+id/report_mxb_filter_begin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:gravity="center_vertical"
	        android:inputType="date"
	        android:layout_margin="5dp"
        	android:drawableRight="@drawable/date_select" />
	</LinearLayout>
	
	<LinearLayout 	        
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:gravity="center_vertical"
       android:orientation="horizontal">
    
       <TextView android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:layout_margin="5dp"
           	android:text="@string/report_mxb_filter_end" />
       
    	<EditText
        	android:id="@+id/report_mxb_filter_end"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" 
        	android:gravity="center_vertical"
        	android:inputType="date"
        	android:layout_margin="5dp"
        	android:drawableRight="@drawable/date_select" />
	</LinearLayout>
	<LinearLayout 	        
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:gravity="center_vertical"
       android:orientation="horizontal">
    
       <TextView android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:layout_margin="5dp"
           	android:text="@string/report_mxb_filter_kmsx" />
       
    	<EditText
        	android:id="@+id/report_mxb_filter_kmsx"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" 
        	android:gravity="center_vertical"
        	android:inputType="date"
        	android:layout_margin="5dp" 
        	android:drawableRight="@drawable/ref_select"/>
	</LinearLayout>		
</LinearLayout>
